--- a/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
@@ -53,7 +53,7 @@
           {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
       </div>
       
-      <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Update Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
