Updated past and upcoming show queries with Join

--- a/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
@@ -5,6 +5,7 @@
     <form class="form" method="post" action="/artists/{{artist.id}}/edit">
       <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
       <div class="form-group">
+        {{ form.csrf_token }}
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
