--- a/projects/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -5,6 +5,7 @@
     <form method="post" class="form">
       <h3 class="form-heading">List a new artist</h3>
       <div class="form-group">
+        {{ form.csrf_token }}
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
