--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -5,6 +5,7 @@
     <form class="form" method="post" action="/venues/{{venue.id}}/edit">
       <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
+        {{ form.csrf_token }}
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
